WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248321
Wrong overflow behavior for input fields containing ::-webkit-textfield-decoration-container in vertical writing-mode
https://bugs.webkit.org/show_bug.cgi?id=248321
Summary
Wrong overflow behavior for input fields containing ::-webkit-textfield-decor...
Tim Nguyen (:ntim)
Reported
2022-11-24 13:50:32 PST
STR: - Enable VerticalFormControlsEnabled - Visit one of these URLs: data:text/html,<input type="search" style="writing-mode: vertical-lr"> or data:text/html,<input type="number" style="writing-mode: vertical-lr"> or data:text/html,<input type="password" style="writing-mode: vertical-lr"> - Type in the input until it overflows AR: - The number spinner overflows out of the input - When you type even more on a page that has overflow, the page starts scrolling as you type (try it on
https://bugs.webkit.org/attachment.cgi?id=463717
) Tests should be added for both of these items, both can probably be WPT: - First one could be tested using a reftest - Second one could test that the scroll position is stable
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-24 13:55:34 PST
<
rdar://problem/102652144
>
Tim Nguyen (:ntim)
Comment 2
2022-11-24 19:39:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6802
Tim Nguyen (:ntim)
Comment 3
2022-11-24 19:39:15 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/37154
EWS
Comment 4
2022-11-24 22:37:52 PST
Committed
257008@main
(13ee07bc7a8e): <
https://commits.webkit.org/257008@main
> Reviewed commits have been landed. Closing PR #6802 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug