Wrong overflow behavior for input fields containing ::-webkit-textfield-decoration-container in vertical writing-mode https://bugs.webkit.org/show_bug.cgi?id=248321 rdar://102652144

Reviewed by Cameron McCormack.

min-width: 0; is set to avoid the inner <div> (which has flex-grow: 1) from growing. We need the equivalent in vertical writing mode.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/number-input-vertical-overflow-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/number-input-vertical-overflow-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/number-input-vertical-overflow.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-vertical-overflow-no-scroll-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-vertical-overflow-no-scroll.html: Added.
* Source/WebCore/html/shadow/TextControlInnerElements.cpp:
(WebCore::TextControlInnerElement::resolveCustomStyle):

Canonical link: https://commits.webkit.org/257008@main